<resources>
    <string name="app_name">智能绿色电单车</string>
    <string name="action_settings">Settings</string>
    <string name="slogan">绿色出行，从我做起</string>
    <string name="bt_1">蓝牙连接</string>
    <string name="bt_2">地图定位</string>
    <string name="bt_3">备用其他</string>
    <string name="title_activity_main2">蓝牙</string>
    <string name="visiblity">打开可见</string>
    <string name="find_device">查找设备</string>
    <string name="bonded_device">已绑定设备</string>
    <string name="waiting">等待连接</string>
    <string name="stop_waiting">断开连接</string>
    <string name="bluetooth">蓝牙开锁</string>
    <string name="send">发送</string>
    <string name="others">其他</string>
    <string name="back">返回</string>
    <string name="title_activity_main3">地图定位</string>
</resources>
